@@ -1,3 +1,8 @@
+Mon Mar 17 16:46:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Fix setting of stemmer so that it
+	  still works with replaylog enabled.
+
 Thu Feb 21 13:12:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Update to new tarballs which actually work,
